# lattices-services

./: .env.example  .gitignore  .pre-commit-config.yaml  Justfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  render.yaml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 39710ce14cba_add_invitations_table.py  53cf28d4c70f_add_rls_policies.py  6e522fa7b7a8_initial_schema.py  9e8450bf0bd1_add_activity_log_table.py  a3f8c2d91b4e_add_notification_tables.py  bc8a2f402d9d_create_personal_workspaces.py  e1eb0d70d0ac_add_group_tables.py  f3367ee49136_add_workspace_tables.py
src/: main.py
src/api/: exception_handlers.py
src/api/dependencies/: auth.py
src/api/middleware/: logging.py  request_id.py  security.py
src/api/routes/: health.py
src/api/v1/: __init__.py  dependencies.py
src/api/v1/routes/: activity.py  groups.py  invitations.py  notifications.py  tags.py  todos.py  workspaces.py
src/api/v1/schemas/: activity.py  common.py  group.py  invitation.py  notification.py  tag.py  todo.py  workspace.py
src/core/: config.py  exceptions.py  logging.py  rate_limit.py
src/domain/entities/: activity.py  group.py  invitation.py  notification.py  profile.py  tag.py  todo.py  workspace.py
src/domain/repositories/: activity_repository.py  group_repository.py  invitation_repository.py  notification_repository.py  tag_repository.py  todo_repository.py  unit_of_work.py  workspace_repository.py
src/domain/services/: activity_service.py  group_service.py  invitation_service.py  notification_service.py  tag_service.py  todo_service.py  workspace_service.py
src/infrastructure/auth/: jwt_provider.py  provider.py
src/infrastructure/database/: models.py  session.py  sqlalchemy_uow.py
src/infrastructure/database/repositories/: sqlalchemy_activity_repo.py  sqlalchemy_group_repo.py  sqlalchemy_invitation_repo.py  sqlalchemy_notification_repo.py  sqlalchemy_tag_repo.py  sqlalchemy_todo_repo.py  sqlalchemy_workspace_repo.py
tests/: conftest.py
tests/integration/api/: test_activity_api.py  test_groups_api.py  test_health.py  test_invitations_api.py  test_notifications_api.py  test_tags_api.py  test_todos_api.py  test_workspaces_api.py
tests/unit/: conftest.py
tests/unit/api/: test_exception_handlers.py
tests/unit/auth/: test_auth_dependency.py  test_jwt_provider.py
tests/unit/middleware/: test_middleware.py
tests/unit/services/: test_activity_service.py  test_group_service.py  test_invitation_service.py  test_notification_service.py  test_tag_service.py  test_todo_service.py  test_workspace_service.py
